Rename threadlink to discordlink throughout codebase
- Update all GitHub links from threadlink to discordlink
- Update README with new name and branding
- Update docs config and landing page
- Add GitHub star/fork counts to footer (client-side fetch)
- Add GitHub star badge to hero section

--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Threadlink
-description: Transform your Discord forum channels into a powerful REST API. Sync threads, messages, and content to build FAQs, blogs, and knowledge bases.
+title: DiscordLink
+description: Sync your Discord content to a database you control. Build websites, integrate via REST API, or export static files. Your data, your way.
 template: splash
 hero:
-  tagline: Transform your Discord forums into powerful APIs for FAQs, blogs, knowledge bases, and more.
+  tagline: Your Discord content, anywhere you need it. Sync forums and channels to build FAQs, knowledge bases, and more.
   image:
     file: ../../assets/logo.svg
   actions:
@@ -12,13 +12,13 @@ hero:
       icon: right-arrow
       variant: primary
     - text: View on GitHub
-      link: https://github.com/KevinTrinh1227/threadlink
+      link: https://github.com/KevinTrinh1227/discordlink
       icon: external
 ---
 
 import { Card, CardGrid, Aside } from '@astrojs/starlight/components';
 
-## Why Threadlink?
+## Why DiscordLink?
 
 <CardGrid stagger>
   <Card title="Zero Friction Content" icon="pencil">
@@ -102,14 +102,14 @@ curl http://localhost:3000/api/threads?serverId=123456789&status=resolved
 
 ## Community
 
-- [GitHub Repository](https://github.com/KevinTrinh1227/threadlink)
-- [Report Issues](https://github.com/KevinTrinh1227/threadlink/issues)
-- [Discussions](https://github.com/KevinTrinh1227/threadlink/discussions)
+- [GitHub Repository](https://github.com/KevinTrinh1227/discordlink)
+- [Report Issues](https://github.com/KevinTrinh1227/discordlink/issues)
+- [Discussions](https://github.com/KevinTrinh1227/discordlink/discussions)
 
 ---
 
 <Aside type="caution" title="Disclaimer">
-  This project is **not affiliated with, endorsed by, or connected to Discord Inc.** "Discord" is a trademark of Discord Inc. Threadlink is an independent, open-source project.
+  This project is **not affiliated with, endorsed by, or connected to Discord Inc.** "Discord" is a trademark of Discord Inc. DiscordLink is an independent, open-source project.
 </Aside>
 
-Built with ❤️ by [Kevin Trinh](https://github.com/KevinTrinh1227) and contributors.
+Built with love by [Kevin Trinh](https://github.com/KevinTrinh1227) and contributors.
