Rebrand to DiscoLink with new logo and assets
- Rename project from discordlink to discolink/DiscoLink
- Add disco ball inspired logo (SVG)
- Add favicon (SVG)
- Add banner image for README
- Update all references throughout codebase
- Update color scheme to purple/blue gradient
- Deploy to discolink.pages.dev

--- a/packages/docs/src/content/docs/contributing/code-style.mdx
+++ b/packages/docs/src/content/docs/contributing/code-style.mdx
@@ -184,7 +184,7 @@ export const threads = sqliteTable('threads', {
 ### Imports Order
 
 1. External packages
-2. Internal packages (@discordlink/*)
+2. Internal packages (@discolink/*)
 3. Relative imports (../ then ./)
 4. Type imports last
 
@@ -194,7 +194,7 @@ import { Hono } from 'hono';
 import { eq } from 'drizzle-orm';
 
 // Internal packages
-import { db, threads } from '@discordlink/db';
+import { db, threads } from '@discolink/db';
 
 // Relative
 import { validateParams } from '../lib/validation';
