--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: DiscordLink
+title: DiscoLink
 description: Sync your Discord content to a database you control. Build websites, integrate via REST API, or export static files. Your data, your way.
 template: splash
 hero:
@@ -12,13 +12,13 @@ hero:
       icon: right-arrow
       variant: primary
     - text: View on GitHub
-      link: https://github.com/KevinTrinh1227/discordlink
+      link: https://github.com/KevinTrinh1227/discolink
       icon: external
 ---
 
 import { Card, CardGrid, Aside } from '@astrojs/starlight/components';
 
-## Why DiscordLink?
+## Why DiscoLink?
 
 <CardGrid stagger>
   <Card title="Zero Friction Content" icon="pencil">
@@ -102,14 +102,14 @@ curl http://localhost:3000/api/threads?serverId=123456789&status=resolved
 
 ## Community
 
-- [GitHub Repository](https://github.com/KevinTrinh1227/discordlink)
-- [Report Issues](https://github.com/KevinTrinh1227/discordlink/issues)
-- [Discussions](https://github.com/KevinTrinh1227/discordlink/discussions)
+- [GitHub Repository](https://github.com/KevinTrinh1227/discolink)
+- [Report Issues](https://github.com/KevinTrinh1227/discolink/issues)
+- [Discussions](https://github.com/KevinTrinh1227/discolink/discussions)
 
 ---
 
 <Aside type="caution" title="Disclaimer">
-  This project is **not affiliated with, endorsed by, or connected to Discord Inc.** "Discord" is a trademark of Discord Inc. DiscordLink is an independent, open-source project.
+  This project is **not affiliated with, endorsed by, or connected to Discord Inc.** "Discord" is a trademark of Discord Inc. DiscoLink is an independent, open-source project.
 </Aside>
 
 Built with love by [Kevin Trinh](https://github.com/KevinTrinh1227) and contributors.
