--- a/packages/docs/src/content/docs/deployment/docker.mdx
+++ b/packages/docs/src/content/docs/deployment/docker.mdx
@@ -116,8 +116,8 @@ COPY packages/bot packages/bot
 COPY tsconfig.json ./
 
 # Build
-RUN pnpm --filter @discordlink/db build
-RUN pnpm --filter @discordlink/bot build
+RUN pnpm --filter @discolink/db build
+RUN pnpm --filter @discolink/bot build
 
 # Production stage
 FROM node:20-alpine
@@ -164,8 +164,8 @@ COPY packages/db packages/db
 COPY packages/api packages/api
 COPY tsconfig.json ./
 
-RUN pnpm --filter @discordlink/db build
-RUN pnpm --filter @discordlink/api build
+RUN pnpm --filter @discolink/db build
+RUN pnpm --filter @discolink/api build
 
 # Production stage
 FROM node:20-alpine
