Replace em dashes with regular hyphens across docs

--- a/packages/docs/src/content/docs/deployment/vercel.mdx
+++ b/packages/docs/src/content/docs/deployment/vercel.mdx
@@ -109,7 +109,7 @@ LOG_LEVEL=info
 ```
 
 <Aside>
-  Don't add `DISCORD_TOKEN` here—the bot runs separately, not on Vercel.
+  Don't add `DISCORD_TOKEN` here - the bot runs separately, not on Vercel.
 </Aside>
 
 ## Database: Turso Setup
