--- a/packages/docs/src/content/docs/getting-started/first-api-call.mdx
+++ b/packages/docs/src/content/docs/getting-started/first-api-call.mdx
@@ -26,7 +26,7 @@ First, you need your Discord server ID. You can find it by:
 1. Enable Developer Mode in Discord (User Settings → Advanced → Developer Mode)
 2. Right-click your server name → Copy Server ID
 
-Or check your console logs when the bot starts—it lists connected server IDs.
+Or check your console logs when the bot starts - it lists connected server IDs.
 
 ## Step 2: Fetch Server Info
 
