--- a/packages/docs/src/content/docs/getting-started/introduction.mdx
+++ b/packages/docs/src/content/docs/getting-started/introduction.mdx
@@ -5,13 +5,13 @@ description: API-first Discord forum/FAQ/blog engine that syncs Discord server c
 
 import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-Discord Forum API is an **API-first solution** that transforms your Discord forum channels into a powerful, searchable database with a REST API. Build community FAQs, developer blogs, knowledge bases, and more—all powered by your Discord community.
+Discord Forum API is an **API-first solution** that transforms your Discord forum channels into a powerful, searchable database with a REST API. Build community FAQs, developer blogs, knowledge bases, and more - all powered by your Discord community.
 
 ## Why Discord Forum API?
 
 <CardGrid>
   <Card title="Zero Friction Content" icon="pencil">
-    Your community creates content naturally in Discord. No extra tools, no learning curve—just keep using Discord.
+    Your community creates content naturally in Discord. No extra tools, no learning curve - just keep using Discord.
   </Card>
   <Card title="Real-time Sync" icon="rocket">
     Messages sync automatically. Edits, reactions, and new threads appear instantly in your database.
