--- a/packages/docs/src/content/docs/getting-started/prerequisites.mdx
+++ b/packages/docs/src/content/docs/getting-started/prerequisites.mdx
@@ -17,7 +17,7 @@ Before setting up Discord Forum API, make sure you have the following.
 
 ## Discord Requirements
 
-You'll need a Discord application with a bot. If you don't have one yet, don't worry—we'll walk through creating one in the [Discord Bot Setup](/guides/discord-bot-setup) guide.
+You'll need a Discord application with a bot. If you don't have one yet, don't worry - we'll walk through creating one in the [Discord Bot Setup](/guides/discord-bot-setup) guide.
 
 ### What You'll Need
 
