--- a/packages/docs/src/content/docs/guides/database-setup.mdx
+++ b/packages/docs/src/content/docs/guides/database-setup.mdx
@@ -17,7 +17,7 @@ Discord Forum API supports multiple database backends. Choose based on your depl
 
 ## SQLite (Default)
 
-SQLite is the default database—perfect for development and small to medium deployments.
+SQLite is the default database - perfect for development and small to medium deployments.
 
 ### Configuration
 
