--- a/packages/docs/src/content/docs/guides/syncing-data.mdx
+++ b/packages/docs/src/content/docs/guides/syncing-data.mdx
@@ -40,7 +40,7 @@ Discord Server
 | Voice channels | No | Not applicable |
 
 <Aside>
-  Attachments aren't downloaded—only the Discord CDN URL is stored. Images are served directly from Discord.
+  Attachments aren't downloaded - only the Discord CDN URL is stored. Images are served directly from Discord.
 </Aside>
 
 ## Sync Types
@@ -187,7 +187,7 @@ The bot respects Discord's rate limits:
 - Exponential backoff
 - Request queuing
 
-You don't need to configure anything—it's handled automatically.
+You don't need to configure anything - it's handled automatically.
 
 ## Data Integrity
 
