--- a/packages/docs/src/content/docs/use-cases/community-faq.mdx
+++ b/packages/docs/src/content/docs/use-cases/community-faq.mdx
@@ -501,7 +501,7 @@ function FAQStructuredData({ entries }) {
 ## Deployment
 
 <Aside type="tip">
-  For static FAQ sites, consider Vercel, Netlify, or Cloudflare Pages—all have generous free tiers.
+  For static FAQ sites, consider Vercel, Netlify, or Cloudflare Pages - all have generous free tiers.
 </Aside>
 
 ### Environment Variables
