--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: DiscoLink Docs
-description: Documentation for DiscoLink - sync your Discord content to a database you control.
+title: DiscoLink
+description: Sync your Discord content to a database you control. Build websites, integrate via REST API, or export static files.
 template: splash
 hero:
-  tagline: Sync Discord forums and channels to build FAQs, knowledge bases, blogs, and more.
+  tagline: Your Discord content, anywhere you need it. Sync forums and channels to build FAQs, knowledge bases, blogs, and more.
   image:
     file: ../../assets/logo.svg
   actions:
@@ -16,24 +16,58 @@ hero:
       icon: document
 ---
 
-import { Card, CardGrid, Aside } from '@astrojs/starlight/components';
+import { Card, CardGrid, LinkCard, Aside } from '@astrojs/starlight/components';
 
-## Quick Navigation
+## Everything You Need
 
-<CardGrid>
-  <Card title="Introduction" icon="rocket">
-    New to DiscoLink? Start with our [Introduction](/getting-started/introduction) to understand the basics.
+<CardGrid stagger>
+  <Card title="REST API" icon="document">
+    Full REST API for integrating Discord content into any application, service, or workflow.
   </Card>
-  <Card title="Quick Start" icon="laptop">
-    Get up and running in 5 minutes with the [Quick Start guide](/getting-started/quick-start).
+  <Card title="Full-Text Search" icon="magnifier">
+    FTS5-powered search indexes all your Discord content for instant full-text search.
   </Card>
-  <Card title="API Reference" icon="document">
-    Explore all endpoints in the [API documentation](/api/overview).
+  <Card title="Real-Time Sync" icon="rocket">
+    Discord bot syncs new messages instantly. No manual exports needed.
   </Card>
-  <Card title="Live Demos" icon="star">
-    See templates in action at [demo.discolink.site](https://demo.discolink.site).
+  <Card title="Static Export" icon="laptop">
+    Export to static HTML with our CLI. No server required for simple use cases.
+  </Card>
+  <Card title="Privacy First" icon="approve-check">
+    Consent-based syncing respects user privacy. Only sync what users agree to share.
+  </Card>
+  <Card title="Self-Hosted" icon="setting">
+    Your data stays on your server. No third-party services, full control.
   </Card>
 </CardGrid>
+
+## How It Works
+
+```
+Discord Forum Channel → Bot syncs content → SQLite/Turso DB → REST API → Your App
+```
+
+1. **Add the Bot** - Invite the DiscoLink bot to your server and select which channels to sync
+2. **Sync Content** - The bot automatically syncs forum threads and messages to your database
+3. **Use It Your Way** - Query via REST API, export static HTML, or use our templates
+
+## Quick Start
+
+```bash
+# Clone and install
+git clone https://github.com/KevinTrinh1227/discolink.git
+cd discolink && pnpm install
+
+# Configure and run
+cp .env.example .env
+pnpm db:push && pnpm dev
+```
+
+<LinkCard
+  title="Full Setup Guide"
+  description="Complete instructions for setting up DiscoLink"
+  href="/getting-started/quick-start"
+/>
 
 ## API Example
 
@@ -49,20 +83,55 @@ curl http://localhost:3000/api/threads?serverId=123456789&status=resolved
       "id": "111222333",
       "title": "How do I implement OAuth?",
       "status": "resolved",
-      "messageCount": 8
+      "messageCount": 8,
+      "author": { "username": "helpful_user" }
     }
   ]
 }
 ```
 
-## Documentation Sections
+## Use Cases
+
+<CardGrid>
+  <LinkCard
+    title="FAQ Pages"
+    description="Turn resolved help threads into searchable FAQs"
+    href="/use-cases/community-faq"
+  />
+  <LinkCard
+    title="Knowledge Base"
+    description="Organize forum content into documentation"
+    href="/use-cases/knowledge-base"
+  />
+  <LinkCard
+    title="Changelog"
+    description="Auto-publish release notes from announcements"
+    href="/use-cases/changelog-announcements"
+  />
+  <LinkCard
+    title="Community Blog"
+    description="Transform discussions into blog posts"
+    href="/use-cases/developer-blog"
+  />
+</CardGrid>
+
+## Live Demos
+
+See DiscoLink templates in action:
+
+- [FAQ Demo](https://demo.discolink.site/faq) - Searchable FAQ from Discord threads
+- [Blog Demo](https://demo.discolink.site/blog) - Community blog with posts
+- [Changelog Demo](https://demo.discolink.site/changelog) - Product updates timeline
+- [Knowledge Base Demo](https://demo.discolink.site/kb) - Categorized documentation
+
+## Documentation
 
 | Section | Description |
 |---------|-------------|
 | [Getting Started](/getting-started/introduction) | Installation, setup, and your first API call |
-| [Guides](/guides/consent) | Detailed guides for consent, webhooks, templates |
+| [Guides](/guides/database-setup) | Database setup, syncing, webhooks, templates |
 | [API Reference](/api/overview) | Full REST API documentation |
-| [Deployment](/deployment/vercel) | Deploy to Vercel, Railway, or VPS |
+| [Deployment](/deployment) | Deploy to Vercel, Railway, Docker, or VPS |
 | [Contributing](/contributing/development-setup) | Help improve DiscoLink |
 
 ---
@@ -71,4 +140,4 @@ curl http://localhost:3000/api/threads?serverId=123456789&status=resolved
   This project is **not affiliated with, endorsed by, or connected to Discord Inc.** "Discord" is a trademark of Discord Inc.
 </Aside>
 
-Built by [Kevin Trinh](https://kevintrinh.dev) and contributors.
+Built by [Kevin Trinh](https://kevintrinh.dev) | [GitHub](https://github.com/KevinTrinh1227/discolink) | Free and open source under MIT license
