Fix docs homepage: remove large hero image, fix card alignment

--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -4,8 +4,6 @@ description: Sync your Discord content to a database you control. Build websites
 template: splash
 hero:
   tagline: Your Discord content, anywhere you need it. Sync forums and channels to build FAQs, knowledge bases, blogs, and more.
-  image:
-    file: ../../assets/logo.svg
   actions:
     - text: Get Started
       link: /getting-started/introduction
@@ -20,7 +18,7 @@ import { Card, CardGrid, LinkCard, Aside } from '@astrojs/starlight/components';
 
 ## Everything You Need
 
-<CardGrid stagger>
+<CardGrid>
   <Card title="REST API" icon="document">
     Full REST API for integrating Discord content into any application, service, or workflow.
   </Card>
